--- a/petclinic-helm/helm/petclinic/values.yaml
+++ b/petclinic-helm/helm/petclinic/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: initsixcloud/petclinic
+  repository: pndrns/petclinic
   tag: latest
   pullPolicy: IfNotPresent
 
